<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/text_output"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:gravity="end"
        android:padding="8dp"
        android:singleLine="true"
        android:maxLength="15"
        android:text="@string/calculator_input"
        android:textAlignment="gravity"
        android:textSize="36sp"
        android:inputType="numberDecimal"
        android:focusable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:visibility="invisible"
        android:id="@+id/text_error"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:gravity="end"
        android:padding="8dp"
        android:singleLine="true"
        android:text="@string/error_message"
        android:textAlignment="gravity"
        android:textSize="36sp"
        android:focusable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/section_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/section_2">

        <Button
            android:id="@+id/btn_1"
            android:hapticFeedbackEnabled="true"
            style="@style/NumeralButtonTheme"
            android:text="@string/numeric_1" />

        <Button
            android:id="@+id/btn_2"
            style="@style/NumeralButtonTheme"
            android:text="@string/numeric_2" />

        <Button
            android:id="@+id/btn_3"
            style="@style/NumeralButtonTheme"
            android:text="@string/numeric_3" />

        <Button
            android:id="@+id/btn_addition"
            style="@style/OperatorButtonTheme"
            android:text="@string/plus_sign" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/section_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/section_3">

        <Button
            android:id="@+id/btn_4"
            style="@style/NumeralButtonTheme"
            android:text="@string/numeric_4" />

        <Button
            android:id="@+id/btn_5"
            style="@style/NumeralButtonTheme"
            android:text="@string/numeric_5" />

        <Button
            android:id="@+id/btn_6"
            style="@style/NumeralButtonTheme"
            android:text="@string/numeric_6" />

        <Button
            android:id="@+id/btn_subtraction"
            style="@style/OperatorButtonTheme"
            android:text="@string/minus_sign" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/section_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/section_4">

        <Button
            android:id="@+id/btn_7"
            style="@style/NumeralButtonTheme"
            android:text="@string/numeric_7" />

        <Button
            android:id="@+id/btn_8"
            style="@style/NumeralButtonTheme"
            android:text="@string/numeric_8" />

        <Button
            android:id="@+id/btn_9"
            style="@style/NumeralButtonTheme"
            android:text="@string/numeric_9" />

        <Button
            android:id="@+id/btn_multiplication"
            style="@style/OperatorButtonTheme"
            android:text="@string/multiplication_sign" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/section_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/section_5">

        <Button
            android:id="@+id/btn_sign"
            style="@style/OperatorButtonTheme"
            android:text="@string/sign_button" />

        <Button
            android:id="@+id/btn_0"
            style="@style/NumeralButtonTheme"
            android:text="@string/numeric_0" />

        <Button
            android:id="@+id/btn_decimal"
            style="@style/OperatorButtonTheme"
            android:text="@string/decimal_button" />

        <Button
            android:id="@+id/btn_division"
            style="@style/OperatorButtonTheme"
            android:text="@string/division_sign" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/section_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btn_clear_all"
            style="@style/ClearButtonTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_button" />
        <Button
            android:id="@+id/btn_calculate"
            style="@style/ClearButtonTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/equals_sign" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>